--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,7 +71,7 @@ services:
         pnpm start
       "
     healthcheck:
-      test: ['CMD', 'curl', '-f', 'http://api:8080/health']
+      test: ['CMD', 'curl', '-f', 'http://localhost:8080/health']
       interval: 10s
       timeout: 3s
       retries: 3
