--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ services:
   postgres:
     image: postgres:15
     restart: always
+    container_name: postgres
     env_file:
       - .env
     ports:
@@ -18,6 +19,7 @@ services:
 
   redis:
     image: redis:alpine
+    container_name: redis
     restart: always
     ports:
       - '6379:6379'
@@ -44,13 +46,14 @@ services:
     networks:
       - chyra_network
     healthcheck:
-      test: ['CMD', 'curl', '-f', 'http://localhost:7700/health']
+      test: ['CMD', 'curl', '-f', 'http://meilisearch:7700/health']
       interval: 10s
       timeout: 3s
       retries: 3
 
   api:
     image: retier/chyra-api:latest
+    container_name: api
     restart: always
     env_file:
       - .env
@@ -79,6 +82,7 @@ services:
   client:
     image: retier/chyra-client:latest
     restart: always
+    container_name: client
     ports:
       - '4173:4173'
     depends_on:
@@ -86,7 +90,7 @@ services:
     networks:
       - chyra_network
     healthcheck:
-      test: ['CMD', 'curl', '-f', 'http://localhost:4173']
+      test: ['CMD', 'curl', '-f', 'http://client:4173']
       interval: 10s
       timeout: 3s
       retries: 3
@@ -96,8 +100,10 @@ services:
     container_name: nginx
     restart: always
     depends_on:
-      - api
-      - client
+      api:
+        condition: service_healthy
+      client:
+        condition: service_healthy
     ports:
       - '80:80'
     volumes:
