--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -31,7 +31,8 @@ jobs:
             cd ~/chyra-library/digital-library-api
             git pull origin main
 
-            echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" > .env
+            echo "PORT=8080" > .env
+            echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> .env
             echo "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" >> .env
             echo "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}" >> .env
             echo "POSTGRES_DB=${{ vars.POSTGRES_DB }}" >> .env
