--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-rate-limit": "^7.4.1",
+    "geoip-lite": "^1.4.10",
     "helmet": "^8.0.0",
     "http-status-codes": "^2.3.0",
     "inversify": "^6.1.4",
@@ -33,6 +34,7 @@
     "redis": "^4.7.0",
     "reflect-metadata": "^0.2.2",
     "tsconfig-paths": "^4.2.0",
+    "ua-parser-js": "^2.0.3",
     "uuid": "^11.0.3",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
@@ -44,6 +46,7 @@
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/geoip-lite": "^1.4.4",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.9.0",
