--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@prisma/client": "^6.1.0",
     "argon2": "^0.41.1",
+    "axios": "^1.8.4",
     "compression": "^1.7.5",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -32,6 +33,7 @@
     "jsonwebtoken": "^9.0.2",
     "meilisearch": "^0.47.0",
     "node-cron": "^3.0.3",
+    "prom-client": "^15.1.3",
     "redis": "^4.7.0",
     "reflect-metadata": "^0.2.2",
     "tsconfig-paths": "^4.2.0",
