--- a/Dockerfile.koyeb
+++ b/Dockerfile.koyeb
@@ -55,4 +55,4 @@ RUN apk add --no-cache curl \
 EXPOSE 8080
 
 # Start the application
-CMD ["sh", "-c", "pnpm dlx prisma migrate deploy && node dist/index.js"]
+CMD ["sh", "-c", " node dist/index.js"] 
