--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es2016", // specify the ECMAScript target version
+    "target": "es2018", // specify the ECMAScript target version
     "module": "CommonJS", // use ES module syntax
     "moduleResolution": "node", // resolve modules like Node.js does
     "esModuleInterop": true, // allow default imports from non-ES modules
@@ -15,7 +15,7 @@
     "declaration": true, // generate .d.ts files
     "outDir": "./dist", // specify the output directory for compiled files
     "sourceMap": true, // generate source maps
-    "types": ["jest"]
+    "types": ["jest", "node"] // include type definitions for Jest and Node.js
   },
   "include": ["src/**/*", "../digital-library/src/routes/v2"], // include all files under src/
   "exclude": ["node_modules", "dist"] // exclude node_modules and dist folder from compilation
