--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,8 +29,8 @@ jobs:
 
       - run: pnpm dlx prisma generate
 
-      - name: Run Tests
-        run: pnpm test
+      # - name: Run Tests
+      #   run: pnpm test
 
       - name: Build Project
         run: pnpm build
