--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -32,7 +32,7 @@ jobs:
             if [ ! -d ~/chyra-library/digital-library-api ]; then
               mkdir -p ~/chyra-library
               cd ~/chyra-library
-              git clone git@github.com:your-username/digital-library-api.git
+              git clone https://github.com/Thees2k1/K900-Digital-Library.git
             else
               cd ~/chyra-library/digital-library-api
               git pull origin main
